[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts", 
    "glow",          
    "persistence",   
] }
egui_plot = "0.32.1"
egui_extras = "0.31.1"
egui_dock = "0.16.0"
common = { path = "./crates/common" }
uuid = { version = "1", features = ["v4", "js"], default-features = false }
urlencoding = "2.1"
base64 = "0.22.1"
sha2 = "0.10"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" 
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde", "now"] }
walkdir = "2.5.0"
anyhow = "1.0.92"
zip = { version = "2.2.0", default-features = false, features = ["deflate"]}
zip-extract = { version = "0.2.1", default-features = false}
clipboard = "0.5.0"