[package]
name = "deployboard"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui-notify = { workspace = true }
ehttp = { workspace = true }
eframe = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise =  { version = "0.3.0", features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise =  { version = "0.3.0", features = ["web"] }