[package]
name = "deployboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deployboard"
path = "src/main.rs"

[package.metadata.bundle.bin.deployboard]
name = "deployboard"
identifier = "com.niklasnordkamp.deployboard"

[package.metadata.bundle.bin.uptime]
name = "uptime"
identifier = "com.niklasnordkamp.uptime"

[package.metadata.bundle.bin.mac-explorer]
name = "mac-explorer"
identifier = "com.niklasnordkamp.macexplorer"

[dependencies]
common = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui-notify = { workspace = true }
ehttp = { workspace = true }
eframe = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise =  { version = "0.3.0", features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise =  { version = "0.3.0", features = ["web"] }