[package]
name = "pushuptracker"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { workspace = true }
egui_plot = { workspace = true }
common = { workspace = true }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.70", features = [
  'Window',
  'DeviceMotionEvent',
  'DeviceOrientationEvent',
  'DeviceAcceleration',
  'DeviceRotationRate',
  'console',
] }
js-sys = "0.3"